# FraudDetectionForFinaincialTransactions

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: unittests.yml
data/: README.md
data/processed/: cleaned_creditcard_data.csv.dvc  cleaned_fraud_data.csv.dvc
data/processed/Feature_engineered/: Feature_engineered_fraud_data.csv.dvc
docs/: README.md
examples/: Notebook_simulation_of_Training_scripts.ipynb  README.md
models/CreditCard Model/: logistic_regression_creditcard.pkl  xgboost_creditcard.pkl
models/Fraud Model/: logistic_regression_fraud.pkl  xgboost_fraud.pkl
notebooks/: EDA_And_Data_Cleanup.ipynb  Feature_engineering_and_Transformation.ipynb  README.md  creditcard-model-interpretatoin.ipynb  fraud-model-interpretatoin.ipynb
scripts/: README.md  Train_CreditCard_model.py  Train_Fraud_model.py
src/core/: DataTransformer.py
src/models/: model_trainer.py
src/utils/: training_and_evaluation_utils.py  utils.py
tests/unit/: test_datatransformer.py  test_utils.py
